5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1712_2496.log
== TEST (2019-05-14 19:32:38) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0

while (num!=-1):
		soma = soma + num

num = int(input("Digite um numero: "))

print(soma)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:33:44) 
-- CODE:
n = int(input("Digite um numero: "))
soma = 0

while (n!=-1):
		soma = soma + n

n = int(input("Digite um numero: "))

print(soma)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 19:36:40) 
-- CODE:
n = int(input("Digite um numero: "))
soma = 0

while (n!=-1):
		s = soma + n

n = int(input("Digite um numero: "))

print(s)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:37:38) 
-- CODE:
n = int(input("Digite um numero: "))
soma = 0

while (n!=-1):
		s = soma + n

	n = int(input("Digite um numero: "))

print(s)
-- EXECUTION TIME:
1.00584
-- ERROR:
  File "/home/codebench/codes/1712/2496/main.py", line 7
    n = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:38:00) 
-- CODE:
n = int(input("Digite um numero: "))
soma = 0

while (n!=-1):
		s = soma + n
		
		n = int(input("Digite um numero: "))
		
print(s)
-- EXECUTION TIME:
0.92106
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
Digite um numero: Digite um numero: Digite um numero: Digite um numero: Digite um numero: -9
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
Digite um numero: Digite um numero: Digite um numero: Digite um numero: Digite um numero: Digite um numero: Digite um numero: Digite um numero: 0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
Digite um numero: Digite um numero: Digite um numero: Digite um numero: -10953
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:46:29) 
-- CODE:
n = int(input("Digite um numero: "))
soma = 0

while (n!=-1):
		s = soma + n
		
		n = int(input("Digite um numero: "))
		
print(s)
-- EXECUTION TIME:
1.4382
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-9
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-10953
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:46:32) 
-- CODE:
n = int(input("Digite um numero: "))
soma = 0

while (n!=-1):
		s = soma + n
		
		n = int(input("Digite um numero: "))
		
print(s)
-- EXECUTION TIME:
1.4433
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-10953
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-10953
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:46:33) 
-- CODE:
n = int(input("Digite um numero: "))
soma = 0

while (n!=-1):
		s = soma + n
		
		n = int(input("Digite um numero: "))
		
print(s)
-- EXECUTION TIME:
1.24062
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-9
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-10953
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:48:14) 
-- CODE:

num = int(input("Digite um numero: "))


soma = 0


while (num != -1): 
	soma = soma + num 
	
       
	num = int(input("Digite um numero: "))


print(soma)
-- EXECUTION TIME:
1.0738
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:55:02) 
-- CODE:
num = int(input("Digite um numero: "))
soma = 0

while (num!=-1):
		soma = soma + num

num = int(input("Digite um numero: "))

print(soma)
-- EXECUTION TIME:
1347.16
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:56:44) 
-- CODE:
num = int(input("Digite um numero: "))


soma = 0


while (num != -1): 
	soma = soma + num 
	
       
	num = int(input("Digite um numero: "))


print(soma)
-- EXECUTION TIME:
0.48556
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:00:02) 
-- CODE:
n = int(input("Digite um numero: "))
soma = 0

while (n!=-1):
		soma = soma + n

n = int(input("Digite um numero: "))

print(soma)
-- EXECUTION TIME:
1562.06
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:02:02) 
-- CODE:
n = int(input("Digite um numero: "))
soma = 0

while (n!=-1):
		s = soma + n

n = int(input("Digite um numero: "))

print(s)
-- EXECUTION TIME:
1480.95
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:02:02) 
-- CODE:
n = int(input("Digite um numero: "))
soma = 0

while (n!=-1):
		s = soma + n

n = int(input("Digite um numero: "))

print(s)
-- EXECUTION TIME:
1473.1
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:30:06) 
-- CODE:
num = int(input("Digite um numero: "))

soma = 0

while (num != -1): 
	soma = soma + num 
	
	num = int(input("Digite um numero: "))
print(soma)
-- EXECUTION TIME:
0.143677
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
